dnl Process this file with autoconf to produce a configure script.
AC_INIT()

PACKAGE="irena"
VERSION="0.1.6"
AUTHOR="Pawel Wilk"
ALL_LINGUAS="en pl"
CONFIG_DIR=./ht-serv

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_ISC_POSIX
AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h strings.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_DECL_SYS_SIGLIST
AC_HEADER_TIME

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_FUNC_MMAP
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(getcwd getwd putenv strdup gettimeofday socket getopt snprintf)

AM_CONDITIONAL(HAVE_SNPRINTF,test "x$ac_cv_func_snprintf" = "xyes")
AC_CHECK_FUNC(sigblock,,AC_CHECK_LIB(bsd, sigblock))
if test "x$ac_cv_lib_bsd_sigblock" = "xyes" -o \
	"x$ac_cv_func_sigblock" = "xyes" ; then
	AC_DEFINE(HAVE_SIGBLOCK)
fi
AM_CONDITIONAL(HAVE_SIGBLOCK,test "x$ac_cv_lib_bsd_sigblock" = "xyes" -o \
        "x$ac_cv_func_sigblock" = "xyes" )

CPPFLAGS="$CPPFLAGS -DCONFIG_DIR=\\\"${CONFIG_DIR}\\\""

MANDIR="`eval MANDIR=$mandir;echo $MANDIR|sed -e \"s#NONE#$ac_default_prefix#\"`"
AC_DEFINE_UNQUOTED(VERSION,"$VERSION")
AC_DEFINE_UNQUOTED(PACKAGE,"$PACKAGE")
dnl AC_DEFINE_UNQUOTED(LOCALEDIR,"$LOCALDIR")

dnl export variables
AC_SUBST(EXTRA_SOURCES)
AC_SUBST(MANDIR)

dnl generate files dependig current configuration
AM_CONFIG_HEADER(config.h)
AC_OUTPUT([Makefile doc/Makefile src/Makefile
	   doc/irena.8 irena.spec])
